--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@formspree/react": "^3.0.0",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.544.0",
     "motion": "^12.23.12",
