--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "eslint-config-next": "15.5.3",
     "eslint-plugin-react": "^7.37.5",
     "globals": "^16.4.0",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "tailwindcss": "^4"
   }
 }
