--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "dependencies": {
     "@formspree/react": "^3.0.0",
     "gray-matter": "^4.0.3",
+    "gsap": "^3.14.2",
     "lenis": "^1.3.17",
     "lucide-react": "^0.544.0",
-    "motion": "^12.23.12",
     "next": "15.5.9",
     "react": "19.1.0",
     "react-dom": "19.1.0",
